# cpp-self-learning

./: .gitignore  AGENT.md  CMakeLists.txt  README.md
cmake/: Testing.cmake  Warnings.cmake
docs/: content-contract.md  contributing.md  learning-path.md  tooling.md
docs/superpowers/plans/: 2026-03-24-cpp-self-learning-v1.md  2026-03-26-cpp-self-learning-v3-tutorial-docs.md
docs/superpowers/specs/: 2026-03-24-cpp-self-learning-design.md  2026-03-24-cpp-self-learning-v2-foundations-design.md  2026-03-26-cpp-self-learning-v3-tutorial-docs-design.md
foundations/: CMakeLists.txt  README.md
foundations/module-01-tooling-and-first-program/: CMakeLists.txt  README.md  lesson.md
foundations/module-01-tooling-and-first-program/assignment/: README.md  main.cpp
foundations/module-01-tooling-and-first-program/drills/: README.md
foundations/module-01-tooling-and-first-program/expert/: README.md
foundations/module-01-tooling-and-first-program/tests/: CMakeLists.txt  test_hello_cli.cpp
foundations/module-02-strings-streams-and-collections/: CMakeLists.txt  README.md  lesson.md
foundations/module-02-strings-streams-and-collections/assignment/: README.md  text_stats.cpp
foundations/module-02-strings-streams-and-collections/drills/: README.md  word_count.cpp
foundations/module-02-strings-streams-and-collections/expert/: README.md
foundations/module-02-strings-streams-and-collections/tests/: CMakeLists.txt  test_text_stats.cpp
foundations/module-03-classes-and-const-correctness/: CMakeLists.txt  README.md  lesson.md
foundations/module-03-classes-and-const-correctness/assignment/: README.md  library.cpp  library.h
foundations/module-03-classes-and-const-correctness/drills/: README.md  counter.cpp  counter.h
foundations/module-03-classes-and-const-correctness/expert/: README.md
foundations/module-03-classes-and-const-correctness/tests/: CMakeLists.txt  test_library.cpp
foundations/module-04-templates-and-stl/: CMakeLists.txt  README.md  lesson.md
foundations/module-04-templates-and-stl/assignment/: README.md  query_engine.cpp  query_engine.h
foundations/module-04-templates-and-stl/drills/: README.md  range_utils.h
foundations/module-04-templates-and-stl/expert/: README.md
foundations/module-04-templates-and-stl/tests/: CMakeLists.txt  test_query_engine.cpp
foundations/module-05-iterators-and-algorithm-contracts/: CMakeLists.txt  README.md  lesson.md
foundations/module-05-iterators-and-algorithm-contracts/assignment/: README.md  contract_checks.h
foundations/module-05-iterators-and-algorithm-contracts/drills/: README.md  range_distance.h
foundations/module-05-iterators-and-algorithm-contracts/expert/: README.md
foundations/module-05-iterators-and-algorithm-contracts/tests/: CMakeLists.txt  test_contract_checks.cpp
foundations/module-06-algorithmic-data-transformation/: CMakeLists.txt  README.md  lesson.md
foundations/module-06-algorithmic-data-transformation/assignment/: README.md  pipeline.h
foundations/module-06-algorithmic-data-transformation/drills/: README.md  normalize_words.h
foundations/module-06-algorithmic-data-transformation/expert/: README.md
foundations/module-06-algorithmic-data-transformation/tests/: CMakeLists.txt  test_pipeline.cpp
foundations/module-07-associative-containers-and-lookup-patterns/: CMakeLists.txt  README.md  lesson.md
foundations/module-07-associative-containers-and-lookup-patterns/assignment/: README.md  tag_index.h
foundations/module-07-associative-containers-and-lookup-patterns/drills/: README.md  frequency_map.h
foundations/module-07-associative-containers-and-lookup-patterns/expert/: README.md
foundations/module-07-associative-containers-and-lookup-patterns/tests/: CMakeLists.txt  test_tag_index.cpp
foundations/module-08-callable-objects-and-customization/: CMakeLists.txt  README.md  lesson.md
foundations/module-08-callable-objects-and-customization/assignment/: README.md  ranker.h
foundations/module-08-callable-objects-and-customization/drills/: README.md  threshold_filter.h
foundations/module-08-callable-objects-and-customization/expert/: README.md
foundations/module-08-callable-objects-and-customization/tests/: CMakeLists.txt  test_ranker.cpp
foundations/module-09-stronger-template-interfaces/: CMakeLists.txt  README.md  lesson.md
foundations/module-09-stronger-template-interfaces/assignment/: README.md  group_by.h
foundations/module-09-stronger-template-interfaces/drills/: README.md  value_selector.h
foundations/module-09-stronger-template-interfaces/expert/: README.md
foundations/module-09-stronger-template-interfaces/tests/: CMakeLists.txt  test_group_by.cpp
projects/: README.md
projects/project-01-mini-search-engine/: CMakeLists.txt  README.md
projects/project-01-mini-search-engine/data/: sample_corpus.txt
projects/project-01-mini-search-engine/src/: index.cpp  index.h  main.cpp
projects/project-01-mini-search-engine/tests/: CMakeLists.txt  test_index.cpp
tooling/: README.md
tooling/cmake/: AddLearningModule.cmake
tooling/scripts/: build.sh  configure.sh  test.sh
tooling/tests/: CMakeLists.txt  assertions.cpp  assertions.h  test_main.cpp
tracks/expert/: README.md
tracks/expert/expert-01-move-semantics-and-value-categories/: CMakeLists.txt  README.md  lesson.md
tracks/expert/expert-01-move-semantics-and-value-categories/drills/: README.md  traceable.h
tracks/expert/expert-01-move-semantics-and-value-categories/tests/: CMakeLists.txt  test_traceable.cpp
